--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -23,7 +23,7 @@ http {
 	include       mime.types;  #文件扩展名与文件类型映射表
 	default_type  application/octet-stream; #默认文件类型
 
-	#charset  utf-8;  #默认编码
+	charset  utf-8;  #默认编码
 
 	server_names_hash_bucket_size 128;  #服务器名字的hash表大小
 	client_header_buffer_size 32k;  #上传文件大小限制
@@ -35,7 +35,7 @@ http {
 
 	#autoindex on; #开启目录列表访问，合适下载服务器，默认关闭。
 
-	keepalive_timeout 60;  #长连接超时时间，单位是秒
+	keepalive_timeout 120;  #长连接超时时间，单位是秒
 
 	tcp_nodelay on;  #防止网络阻塞
 
@@ -63,9 +63,9 @@ http {
 		#server 192.168.80.123:80 weight=3;
 	#}
 
-	log_format '$remote_addr - $remote_user [$time_local] "$request" '
-	              '$status $body_bytes_sent "$http_referer" '
-	              '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format main '$remote_addr - $remote_user [$time_local]  '
+        '"$request" $status $request_length $request_time $body_bytes_sent '
+        '"$http_referer" "$http_user_agent" $server_addr $upstream_addr $host $upstream_cache_status';
 
 	include /usr/local/nginx/conf/vhosts/*.conf;
 }
