修改nginx配置示例

--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -2,8 +2,8 @@
 user  www www; #定义Nginx运行的用户和用户组
 worker_processes  1; #nginx进程数，建议设置为等于CPU总核心数。
 
-error_log  /usr/local/nginx/logs/error.log crit; #全局错误日志定义类型，[ debug | info | notice | warn | error | crit ]
-pid        /usr/local/nginx/logs/nginx.pid; #进程文件
+error_log  /home/ryan/opt/nginx/logs/error.log crit; #全局错误日志定义类型，[ debug | info | notice | warn | error | crit ]
+pid        /home/ryan/opt/nginx/logs/nginx.pid; #进程文件
 
 #Specifies the value for maximum file descriptors that can be opened by this process. 
 worker_rlimit_nofile 65535;
@@ -65,7 +65,7 @@ http {
 
     log_format main '$remote_addr - $remote_user [$time_local]  '
         '"$request" $status $request_length $request_time $body_bytes_sent '
-        '"$http_referer" "$http_user_agent" $server_addr $upstream_addr $host $upstream_cache_status';
+        '"$http_referer" "$http_user_agent" $server_addr $upstream_addr $host';
 
-	include /usr/local/nginx/conf/vhosts/*.conf;
+	include /home/ryan/opt/nginx/conf/vhosts/*.conf;
 }
