--- a/nginx_config/vhosts/default.conf
+++ b/nginx_config/vhosts/default.conf
@@ -21,5 +21,5 @@ server {
 		#expires 1h;
 	}
 	
-	access_log  /home/ryan/opt/nginx/logs/default.log;
+	access_log  ~/opt/nginx/logs/default.log;
 }
