--- a/redis_config/6380.conf
+++ b/redis_config/6380.conf
@@ -38,7 +38,7 @@ daemonize yes
 
 # When running daemonized, Redis writes a pid file in /var/run/redis.pid by
 # default. You can specify a custom pid file location here.
-pidfile /home/ryan/opt/redis/log/redis_6380.pid
+pidfile ~/opt/redis/log/redis_6380.pid
 
 # Accept connections on the specified port, default is 6379.
 # If port 0 is specified Redis will not listen on a TCP socket.
@@ -100,7 +100,7 @@ loglevel notice
 # Specify the log file name. Also the empty string can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile "/home/ryan/opt/redis/log/redis.log"
+logfile "~/opt/redis/log/redis.log"
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
@@ -183,7 +183,7 @@ dbfilename "dump.rdb"
 # The Append Only File will also be created inside this directory.
 #
 # Note that you must specify a directory here, not a file name.
-dir "/home/ryan/opt/redis/data/"
+dir "~/opt/redis/data/"
 
 ################################# REPLICATION #################################
 
