--- a/nginx_config/nginx.conf
+++ b/nginx_config/nginx.conf
@@ -1,5 +1,5 @@
 
-user  www www; #定义Nginx运行的用户和用户组
+user  work work; #定义Nginx运行的用户和用户组
 worker_processes  1; #nginx进程数，建议设置为等于CPU总核心数。
 
 error_log  ~/opt/nginx/logs/error.log crit; #全局错误日志定义类型，[ debug | info | notice | warn | error | crit ]
